# streaming-iterator

./: .travis.yml  Cargo.toml  README.md
.circleci/: config.yml
src/: lib.rs  slice.rs  sources.rs
