[package]
name = "streaming-iterator"
version = "0.1.5"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Streaming iterators"
repository = "https://github.com/sfackler/streaming-iterator"
readme = "README.md"

[package.metadata.docs.rs]
features = ["std"]

[features]
std = []

[dependencies]
