[package]
name = "streaming-iterator"
version = "0.1.8"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Streaming iterators"
repository = "https://github.com/sfackler/streaming-iterator"
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[package.metadata.docs.rs]
features = ["std"]

[features]
std = []

[dependencies]
